# discrete_math

backpack/: CMakeLists.txt  backpack.cpp
brboundkomm/: CMakeLists.txt  brboundkomm.cpp
motors/: CMakeLists.txt  motors.cpp
reversebackpack/: CMakeLists.txt  reversebackpack.cpp
simplex/: CMakeLists.txt  simplex.cpp
ski/: CMakeLists.txt  ski.cpp
srcreverse/: CMakeLists.txt  srcreverse.cpp
